--- a/NavBar_Responsive_Animated/style.css
+++ b/NavBar_Responsive_Animated/style.css
@@ -16,95 +16,99 @@ body {
 }
 
 nav {
+    height: 60px;
     background-color: var(--background-color);
-}
-
-nav ul {
-    width: 100%;
     display: flex;
-    list-style: none;
     justify-content: flex-end;
     align-items: center;
 }
 
-nav li {
-    height: 50px;
-}
-
-nav li:first-child {
-    margin-right: auto;
-}
-
-nav a {
-    height: 100%;
-    display: flex;
-    color: var(--text-color);
-    text-decoration: none;
-    align-items: center;
-    padding: 0 20px;
-}
-
-nav a:hover {
-    background-color: var(--primary-color);
-}
-
-nav label {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    padding: 0 20px;
-    cursor: pointer;
-}
-
-#sidebar-active {
-    display: block;
-}
-
 .sidebar {
-    position: fixed;
-    background-color: var(--background-color);
-    top: 0;
-    right: -250px; /* Start hidden off-screen */
-    height: 100vh;
-    width: 250px;
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    z-index: 999;
-    transition: right 0.3s ease-in-out; /* Smooth transition for open/close */
-    overflow-y: auto;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.sidebar li {
+.sidebar ul{
     width: 100%;
+    height: 100%;
+    list-style: none;
+    display: flex;
+}
+
+.sidebar li{
+    height: 100%;
 }
 
 .sidebar a {
-    width: 100%;
-    padding: 15px 20px;
-    color: var(--text-color);
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
     text-decoration: none;
+    color: var(--text-color);
 }
 
 .sidebar a:hover {
     background-color: var(--primary-color);
 }
 
-.show-on-mobile {
+.sidebar .home-link {
+    margin-right: auto;
+}
+
+#sidebar-active {
     display: none;
 }
 
-@media screen and (max-width: 800px) {
-    .hide-on-mobile {
-        display: none;
+.open-sidebar-button, .close-sidebar-button {
+    display: none;
+    padding: 15px 20px;
+}
+
+
+@media (max-width: 550px) {
+    .sidebar {
+        flex-direction: column;
+        align-items: flex-start;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 250px;
+        z-index: 999;
+        background-color: var(--background-color);
+        transition: 0.5s ease-out;
     }
-    
-    .show-on-mobile {
+
+    .sidebar ul{
+        flex-direction: column;
+    }
+
+    .sidebar li {
+        width: 100%;
+        height: 60px;
+    }
+
+    .sidebar ul a{
+        width: 100%;
+    }
+
+    .close-sidebar-button, .open-sidebar-button {
         display: block;
     }
 
     #sidebar-active:checked ~ .sidebar {
-        display: flex;
+        right: 0;
+    }
+
+    #sidebar-active:checked ~ #overlay{
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 998;
     }
 }
